# advanced-microtech

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  feedback.txt
IQMathLib/include/: IQmathLib.h
cmake/: ccs.cmake  msp430.cmake
example/: CMakeLists.txt
example/audiorecorder/: CMakeLists.txt  audiorecorderexemple.cpp
example/stringbuilder/: CMakeLists.txt  stringbuilderex.cpp
exercise1/: CMakeLists.txt  exercise1.cpp  exercise1.pp
exercise2/: CMakeLists.txt  exercise2.cpp
exercise3/: CMakeLists.txt  exercise3.cpp
exercise4/: CMakeLists.txt  exercise4.cpp
exercise5/: Audio Recorder.puml  Audio.hpp  AudioRecorder.hpp  CMakeLists.txt  Class diagram.puml  Goal.txt  Playing.puml  Recording.puml  exercise5.cpp
exercise5/audiorecorder/: Audio.cpp  Audio.hpp  AudioRecorder.cpp  AudioRecorder.hpp  MemoryManager.hpp  MemoryManagerImpl.hpp
exercise5/menu/: AudioMenu.cpp  AudioMenu.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  (+7 more)
libs/: CMakeLists.txt  LCD.cpp  LCD.hpp  LCD.pp  LcdCommands.hpp  adac.cpp  adac.hpp  digipoti.hpp  flash.hpp  i2c.cpp  i2c.hpp  mma.cpp  mma.hpp  mmaRegisters.hpp  spi.hpp  templateEMP.c  templateEMP.cpp  templateEMP.h  templateEMP.pp
libs/common/: Adc.hpp  Button.hpp  CMakeLists.txt  Debouncer.hpp  GPIOs.hpp  Joystick.cpp  Joystick.hpp  MovingAverage.hpp  Pwm.hpp  ShiftRegister.cpp  ShiftRegister.hpp  SignalGenerator.hpp  StringBuilder.hpp  Timer.cpp  Timer.hpp  adc.cpp  adc.hpp  clocks.cpp  clocks.hpp  fields.hpp  gpio.hpp  helpers.hpp  movingaverage.hpp  parallelbus.hpp  pwm.hpp  ringbuffer.hpp  tasks.hpp  usci.cpp  usci.hpp
mock/: CMakeLists.txt  IQmathLib.h  intrinsics.cpp  intrinsics.h  msp430g2553.cpp  msp430g2553.h  templateEMP.h
(+35 files in other folders)
